--- a/css/styles.css
+++ b/css/styles.css
@@ -1,86 +1,149 @@
+* {
+  overflow: hidden;
+}
+
 body {
-    font-size: 16px;
-    color: #fff;
-    background-color: #61122f;
-    font-family: 'Oxygen', sans-serif;
-  }
+  font-size: 16px;
+  font-family: 'Oxygen', sans-serif;
+}
   
   /** HEADER **/
   #header-nav {
-    background-color: #f6b319;
+    background-color: #c97d31;
     border-radius: 0;
     border: 0;
   }
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #fff;
+}
   
-  #logo-img {
-    background: url('../images/restaurant-logo_large.png') no-repeat;
-    width: 150px;
-    height: 150px;
-    margin: 10px 15px 10px 0;
-  }
+.navbar-brand h1 { /* Restaurant name */
+  font-family: 'Lora', serif;
+  color: #000000;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgb(21, 142, 163);
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
+}
+ 
+#nav-list{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+#nav-list a {
+  text-align: center;
+}
+#nav-list a span{
+  color: #000000;
+  text-align: center;
+  font-weight: bolder;
+  font-size: 18px;
+  box-sizing: border-box;
+  border-bottom: 1px solid black;
+}
+.navbar-nav>li>a {
+  padding-top: 25px;
+  padding-bottom: 10px;
+  line-height: 20px;
+  margin-bottom: -2px;
+  background-color: white;
+  overflow: hidden;
+}
   
-  .navbar-brand {
-    padding-top: 25px;
-  }
+  /* .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+    border: 1px solid #ffffff;
+  } */
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -41px;
+  overflow: hidden;
   
-  .navbar-brand h1 { /* Restaurant name */
-    font-family: 'Lora', serif;
-    color: #557c3e;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-shadow: 1px 1px 1px #222;
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: .75;
-  }
-  .navbar-brand a:hover, .navbar-brand a:focus {
-    text-decoration: none;
-  }
-  .navbar-brand p { /* Kosher cert */
-    color: #000;
-    text-transform: uppercase;
-    font-size: .7em;
-    margin-top: 15px;
-  }
-  .navbar-brand p span { /* Star-K */
-    vertical-align: middle;
-  }
-  
-  #nav-list {
-    margin-top: 10px;
-  }
-  #nav-list a {
-    color: #951C49;
-    text-align: center;
-  }
-  #nav-list a:hover {
-    background: #E7E7E7;
-  }
-  #nav-list a span {
-    font-size: 1.8em;
-  }
-  
-  #phone {
-    margin-top: 5px;
-  }
-  #phone a { /* Phone number */
-    text-align: right;
-    padding-bottom: 0;
-  }
-  #phone div { /* We Deliver */
-    color: #557c3e;
-    text-align: right;
-    padding-right: 15px;
-  }
-  
-  .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #61122f;
-  }
-  .navbar-header button.navbar-toggle {
-    clear: both;
-    margin-top: -30px;
-  }
+}
   /* END HEADER */
   
-  
+/* ------------------------------------------------------------------------------------- */
+
+h1 {
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+/* .menu{
+  text-align: ;
+} */
+.content {
+  background-color: rgb(158, 158, 158);
+  box-sizing: border-box;
+  border: 1px solid black;
+  margin: 45px 30px 20px 10px;
+  padding: 15px;
+  width: 410px;
+  height: fit-content;
+  float: left;
+}
+.name {
+  box-sizing: border-box;
+  border: 1px solid black;
+  width: 100px;
+  font-size: 20px;
+  font-weight: bolder;
+  text-align: center;
+  margin-bottom: 10px;
+  position: relative;
+  top: -15px;
+  left: -16px;
+}
+.na1 {
+  background-color: plum;
+}
+.na2 {
+  background-color: rgb(190, 59, 36);
+  color: white;
+}
+.na3 {
+  background-color: rgb(204, 162, 58);
+}
+
+@media (min-width: 992px) {
+  .content { float: left; }
+  .cont-1, .cont-2, .cont-3 { width: 25%; margin-left: 5%;}
+  .details span{
+      margin: 10px;
+      padding: 5px;
+      font-size: 16px;
+  }
+
+  /* .details-2 span {
+      margin: 10px;
+      padding: 5px;
+      font-size: 16px;
+  }
+  .details-3 span{
+      margin: 10px;
+      padding: 5px;
+      font-size: 16px;
+  } */
+}
+@media (min-width: 768px) and  (max-width: 991px) {
+  .content { float: left; }
+  .cont-1, .cont-2 { width: 40%; }
+  .cont-3 { width: 89%; }
+  .cont-1, .cont-2, .cont-3 { margin-left: 5%; }
+  .details span{
+      margin: 10px;
+      padding: 5px;
+      font-size: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .content { float: left;}
+  .cont-1, .cont-2, .cont-3 { width: 90%; margin-left: 5%;}
+  .details span{
+      margin: 10px;
+      padding: 5px;
+      font-size: 16px;
+  }
+}
+
