--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   overflow: hidden;
-}
+} */
 
 body {
   font-size: 16px;
@@ -32,6 +32,7 @@ body {
 #nav-list{
   margin-top: 0px;
   margin-bottom: 0px;
+  overflow: hidden;
 }
 #nav-list a {
   text-align: center;
